--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -27,12 +27,20 @@
                                 <label class="form-check-label stretched-link" for="topic1">Rechnen</label>
                                 </li>
                                 <li class="list-group-item rounded-0 border border-dark border-top-0">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,fractions" id="topic2">
+                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,fraction" id="topic2">
                                 <label class="form-check-label stretched-link" for="topic2">Brüche</label>
                                 </li>
                                 <li class="list-group-item rounded-0 border border-dark border-top-0">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,power" id="topic3">
+                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,percent" id="topic3">
                                 <label class="form-check-label stretched-link" for="topic3">Potenzen</label>
+                                </li>
+                                <li class="list-group-item rounded-0 border border-dark border-top-0">
+                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="geometry,angle" id="topic4">
+                                <label class="form-check-label stretched-link" for="topic4">Geometrie</label>
+                                </li>
+                                <li class="list-group-item rounded-0 border border-dark border-top-0">
+                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="function" id="topic5">
+                                <label class="form-check-label stretched-link" for="topic5">Funktionen</label>
                                 </li>
                             </ul>
                         </div>
