--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -106,8 +106,8 @@
                             <input type="radio" class="btn-check durationCheck" name="duration" id="10_min" value="10" autocomplete="off">
                             <label class="btn btn-outline-dark rounded-0" for="10_min">10 min</label>
                              
-                            <input type="radio" class="btn-check durationCheck" name="duration" id="infin" value="0" autocomplete="off">
-                            <label id="infin-label" class="btn btn-outline-dark rounded-0 p-0" for="infin" style="font-size:25px">&infin;</label>
+                            <!--<input type="radio" class="btn-check durationCheck" name="duration" id="infin" value="0" autocomplete="off">-->
+                            <!--<label id="infin-label" class="btn btn-outline-dark rounded-0 p-0" for="infin" style="font-size:25px">&infin;</label>-->
                         </div>
                     </div>
 
