--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body style="">
         <p class="display-2 text-center mt-5">Puzzle-Trainer</p>
         <div class="container h-100">  
-            <div class="row row-cols-3 h-25">
-                <div class="col mt-5">
+            <div class="row row-cols-2 h-25">
+                <div class="col mt-5 d-none">
                     <button id="class5-button" type="button" class="btn btn-outline-dark h-100 w-100 rounded-0 my-2" style="font-size:40px">Klasse 5</button>
                 </div>
                 <div class="col mt-5"> 
@@ -22,7 +22,7 @@
                 <div class="col mt-5">         
                     <button id="class7-button" type="button" class="btn btn-outline-dark h-100 w-100 rounded-0 my-2" style="font-size:40px">Klasse 7</button>
                 </div>
-                <div class="col mt-5">         
+                <div class="col mt-5 d-none">         
                     <button id="class8-button" type="button" class="btn btn-outline-dark h-100 w-100 rounded-0 my-2" style="font-size:40px">Klasse 8</button>
                 </div>
             </div>
