--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -158,9 +158,9 @@
                     </div> 
 
                     <div id="db-control" class="mt-auto align-self-center">
-                        <button id="delete-puzzles-button" class="btn btn-outline-dark rounded-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Delete Puzzles">
+                        <button id="delete-puzzles-button" class="btn btn-outline-dark rounded-0 d-none" type="button" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Delete Puzzles">
                             <span class="material-symbols-outlined">
-                                delete
+                                extension_off
                             </span>
                         </button>
                         <button id="delete-temps-button" class="btn btn-outline-dark rounded-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Delete Temps">
@@ -168,9 +168,14 @@
                                 auto_delete
                             </span>
                         </button>
-                        <button id="reset-db-button" class="btn btn-outline-dark rounded-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Reset Firebase">
+                        <button id="reset-db-button" class="btn btn-outline-dark rounded-0 d-none" type="button" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Reset Firebase">
                             <span class="material-symbols-outlined">
                                 delete_forever
+                            </span>
+                        </button>
+                        <button id="delete-rooms-button" class="btn btn-outline-dark rounded-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Delete Rooms">
+                            <span class="material-symbols-outlined">
+                                videogame_asset_off
                             </span>
                         </button>
 
