--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -167,6 +167,13 @@
                     </div> 
                 </div>
             </div>
+            <div id="puzzleGenerator-container" class="position-absolute bottom-0 end-0">
+            <button id="puzzleGenerator-button" type="button" class="btn border border-dark rounded-0 pt-3">
+                <span class="material-symbols-outlined" style="font-size:60px">
+                    construction
+                </span>
+            </button>
+        </div>
         </div> 
         <script type="module" charset="utf-8" src="./waitingRoom.js"></script>
         <script type="module" charset="utf-8" src="./waitingRoomJoin.js"></script>
