--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -20,32 +20,9 @@
                     <p class="display-6 text-center mt-5">Themen</p>
                     <div id="topic-container" class="row my-2">
                         <div class="col">
-                            <!--checkboxes can use puzzles from database according to tags in id-->
-                            <ul class="list-group">
-                                <li class="list-group-item rounded-0 border border-dark">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,integer" id="topic1"> 
-                                <label class="form-check-label stretched-link" for="topic1">Rechnen</label>
-                                </li>
-                                <li class="list-group-item rounded-0 border border-dark border-top-0">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,fraction" id="topic2">
-                                <label class="form-check-label stretched-link" for="topic2">Brüche</label>
-                                </li>
-                                <li class="list-group-item rounded-0 border border-dark border-top-0">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="calc,percent" id="topic3">
-                                <label class="form-check-label stretched-link" for="topic3">Potenzen</label>
-                                </li>
-                                <li class="list-group-item rounded-0 border border-dark border-top-0">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="geometry,angle" id="topic4">
-                                <label class="form-check-label stretched-link" for="topic4">Geometrie</label>
-                                </li>
-                                <li class="list-group-item rounded-0 border border-dark border-top-0">
-                                <input class="form-check-input me-1 topicCheck" type="checkbox" value="function" id="topic5">
-                                <label class="form-check-label stretched-link" for="topic5">Funktionen</label>
-                                </li>
-                            </ul>
+                            <ul id="topics" class="list-group"></ul>
                         </div>
                     </div>
-
                 </div>
                 <div class="col-8 d-flex flex-column">
 
